mpulse case-study development

--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -24,21 +24,78 @@
 					providers
 				</h2>
 			</div>
+            <div class="hero-img">
+                <img src="../../images/mpulse/device-visual.svg" alt="device visual" class="responsive">
+            </div>
 		</div>
 	</section>
 	<section class="what-we-did">
 		<div class="container">
-			<div class="tags"></div>
-			<div class="tags"></div>
-			<div class="tags"></div>
+            <div class="tech-stack">
+                <div class="technology-tags">
+                    <div class="tags">
+                        <p class="tag-title">What we did:</p>
+                        <div class="project-tag">
+                            <span class="tag">UI/UX</span>
+                            <span class="tag">WEB APP DEVELOPMENT</span>
+                            <span class="tag">PRODUCT ARCHITECTURE</span>
+                        </div>
+                    </div>
+                    <div class="tags">2</div>
+                    <div class="tags">3</div>
+                </div>
+            </div>
 		</div>
 	</section>
-	<section class="an-overview"></section>
-	<section class="the-challenge"></section>
-	<section class="our-approach"></section>
-	<section class="our-design-process"></section>
-	<section class="ui-design"></section>
-	<section class="secondary-banner"></section>
+	<section class="an-overview">
+        <div class="overview-content">
+            <h2 class="overview-title">A complete patient engagement solution that improves communication, retention and health outcomes of patients</h2>
+            <p class="para-detail">Engaging patients in their own health care routine is difficult. The negligence in taking care of the patient not only causes harm to them, but also to healthcare providers. It leads to added costs for plans and providers, and poor health outcomes for consumers.
+            <p class="second-para-detail">To tackle this, mPulse offers a conversational AI solution where they send tailored appointment reminders, medication reminders, insurance renewal reminders to users and help them take charge of their own health. They also use machine learning to understand their users’ preferable mode and frequency of communication to enhance the patient experience.</p>            
+        </div>
+        <div class="diagrame"></div>
+    </section>
+	<section class="the-challenge">
+        <h2 class="tackling-the-scalabi">Tackling the scalability issue to provide a seamless customer experience</h2>
+        <p class="m-pulse-wanted-us-to">mPulse wanted us to help them in making the platform more secure, efficient and fast. The earlier platform had some limitations related to performance and scalability. Our partners realized that in order to grow the platform the right way, there was an urgent need to address the scalability and make the platform future-ready.</p>
+    </section>
+	<section class="our-approach">
+        <div class="approach-content">
+            <h2 class="glued-to-users-prob">Glued to user’s problems, not our assumptions</h2>
+            <div class="row">
+                <div class="column-left">
+                    <p class="we-spent-our-initial">We spent our initial days trying to understand the product, the business problem, and the goals of end users. Since healthcare is a complex domain, we know that the only way to solve problems is to keep our human rationale aside and think through the heart of the problem-- why patients need tailored conversations? What could happen if patients don’t receive timely updates? Why is secure channel messaging important? Why 1 million messages in a day?</p>
+                </div>
+                <div class="column-right">
+                    <p class="to-uncover-answers">To uncover answers to these questions, our team went to visit the mPulse headquarters in the US and spoke to everyone across diverse parts of the business. We talked to people from marketing, sales, and design and spent time listening and learning about the challenges they face. Working collaboratively through many workshops and meetings, we were able to paint a picture of what problem we were trying to solve.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+	<section class="our-design-process">
+        <div class="design-process">
+            <h2 class="main-title">Beginning with a right foundation</h2>
+            <p class="simple-text">Earlier, the platform which healthcare providers used to reach out to patients was not self-serving. To create a new campaign, the users had to get in touch with the mPulse mobile’s customer support team who, in turn, created a new campaign as per the customer requirements.</p>
+            <p class="simple-text-2">To make the platform self-sufficient, the mPulse team asked us to redesign their platform for the end users, so that users can create and analyze their campaigns by themselves.</p>
+            <p class="simple-text-3">During the design phase, our biggest challenge was to figure out how to make the workflows extremely simple to use so that the end users don’t feel as if something has drastically changed in the way they work and their world is falling apart with this major overhaul. We had to ensure that the process flows remained intact and did not hinder the user’s existing mental models of completing a task.</p>
+        </div>
+        <div class="flowchart"></div>
+        <div class="user-flow-diagram">
+            User flow diagram for “Create Program” workflow - one of the main feature within program manager module
+        </div>
+    </section>
+	<section class="ui-design">
+        <div class="design-approach">
+            <h2 class="main-title">Improving usability and user experience of the system with our visual designs</h2>
+            <p class="para-text">Since the platform has huge amounts of data, it was a challenge to work on creating simple workflows for our users. Nonetheless, it was a challenge that we loved solving!</p>
+            <p class="para-text-2">we have maintained the simplicity, visual hierarchy and consistency in all the flows of the application. In fact, even the colors (blue and orange) are used keeping in mind mPulse’s branding colors.</p>
+        </div>
+        <div class="color-palette"></div>
+        <div class="ui-component"></div>
+    </section>
+	<section class="secondary-banner">
+        <div class="ui-showcase"></div>
+    </section>
 	<section class="development"></section>
 	<section class="the-outcome"></section>
 
