Add new section in mPulse case study

--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -33,7 +33,7 @@
 		<div class="container">
             <div class="tech-stack">
                 <div class="technology-tags">
-                    <div class="tags">
+                    <div class="items">
                         <p class="tag-title">What we did:</p>
                         <div class="project-tag">
                             <span class="tag">UI/UX</span>
@@ -41,8 +41,26 @@
                             <span class="tag">PRODUCT ARCHITECTURE</span>
                         </div>
                     </div>
-                    <div class="tags">2</div>
-                    <div class="tags">3</div>
+
+                    <div class="items-1">
+                        <p class="tag-title">Developed on:</p>
+                        <div class="technologies">Python, Java, Java Script, React, Django, Flask, Spring, Hibernate, Tornado, SQLAlchemy, Postgress, Redshift, Elasticsearch, Logstash, Redis, RabbitMQ</div>                                                    
+                    </div>
+
+                    <div class="items-2">
+                        <p class="tag-title">Share on:</p>
+                        <div class="social-share"></div>
+                    </div>
+                    <!--<div class="tags">
+                        <p class="tag-title">Developed on:</p>
+                        <div class="items">
+                            <p class="technologies">Python, Java, Java Script, React, Django, Flask, Spring, Hibernate, Tornado, SQLAlchemy, Postgress, Redshift,Elasticsearch, Logstash, Redis, RabbitMQ</p>
+                        </div>
+                    </div>-->
+                    <!--<div class="tags">
+                        <p class="tag-title">Share on:</p>
+                        <div class="items">dfdsfsdf</div>
+                    </div>-->
                 </div>
             </div>
 		</div>
@@ -56,8 +74,10 @@
         <div class="diagrame"></div>
     </section>
 	<section class="the-challenge">
-        <h2 class="tackling-the-scalabi">Tackling the scalability issue to provide a seamless customer experience</h2>
-        <p class="m-pulse-wanted-us-to">mPulse wanted us to help them in making the platform more secure, efficient and fast. The earlier platform had some limitations related to performance and scalability. Our partners realized that in order to grow the platform the right way, there was an urgent need to address the scalability and make the platform future-ready.</p>
+        <div class="challenge">
+            <h2 class="tackling-the-scalabi">Tackling the scalability issue to provide a seamless customer experience</h2>
+            <p class="m-pulse-wanted-us-to">mPulse wanted us to help them in making the platform more secure, efficient and fast. The earlier platform had some limitations related to performance and scalability. Our partners realized that in order to grow the platform the right way, there was an urgent need to address the scalability and make the platform future-ready.</p>
+        </div>
     </section>
 	<section class="our-approach">
         <div class="approach-content">
@@ -96,8 +116,20 @@
 	<section class="secondary-banner">
         <div class="ui-showcase"></div>
     </section>
-	<section class="development"></section>
-	<section class="the-outcome"></section>
+	<section class="development">
+        <div class="development-process">
+            <h2 class="main-title">Engineering a robust solution</h2>
+            <p class="process-text"> In different modules, we also did various API integrations (Compass, Eloqua, Airflow, Apollo) to streamline processes like medication reminders, creating and queueing of campaigns, and file processing. We also started getting involved in building a robust architecture for the platform to ensure that it’s scalable, secure and performant.</p>
+            <p class="process-text-2">Apart from that, our engineers implemented a secure messaging channel which works on a host of latest technologies (Java, Spring, Hibernate, Python, Tornado, Celery, Postgres) and is deployed on AWS.</p>
+            <p class="process-text-3">Till date, we’ve worked on many different modules of the platform which has not only helped the end users but also the sales team at mPulse who directly interact with their customers. In one of the modules, we’ve worked on implementing Elastic search which has greatly reduced the search time, thereby making the core platform more effective.</p>
+        </div>
+    </section>
+	<section class="the-outcome">
+        <div class="outcome-content">
+            <h2 class="main-title">A transformative digital experience and better business outcomes</h2>
+            <p class="outcome-para">Our partnership with mPulse is in an ongoing phase and we’re glad that we could assist mPulse in creating a technically-sound patient engagement platform. Today, mPulse has successfully transitioned to a better performing, scalable solution with more improvements on the way. The platform sends close to 330K messages on a normal business day during business hours, peaking at half a million on the busiest days. </p>
+        </div>
+    </section>
 
 	<section class="read-next"></section>
 	<section class="see-more"></section>
