Add new section in mpulse case study

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!--                  <span class="navTrigger-instructions">Toggle Navigation</span>-->
 <!--              </button>-->
 <!--          </span>-->
-					<div class="navigation-wrapper">
+					<!--<div class="navigation-wrapper">
 						<nav class="navigation-wrapper__content">
 							<ul>
 								<li class="navigation-wrapper__content-link">
@@ -56,9 +56,9 @@
 							<img alt="nav-icon"
 							     class="nav-circle" src="./images/menu.svg" />
 						</nav>
-					</div>
+					</div>-->
 
-					<div aria-hidden="true" class="site-navigation" id="site-navigation">
+					<!--<div aria-hidden="true" class="site-navigation" id="site-navigation">
 						<nav class="site-navigation&#45;&#45;nav" role="navigation">
 							<ul class="site-navigation&#45;&#45;primary-links">
 								<li class="site-navigation&#45;&#45;link-container">
@@ -89,7 +89,7 @@
 								</li>
 							</ul>
 						</nav>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
