--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -25,12 +25,11 @@
 				</h2>
 			</div>
             <div class="hero-img">
-                <img src="../../images/mpulse/device-visual.svg" alt="device visual" class="responsive">
+                <!--<img src="../../images/mpulse/device-visual.svg" alt="device visual" class="responsive">-->
             </div>
 		</div>
 	</section>
 	<section class="what-we-did">
-		<div class="container">
             <div class="tech-stack">
                 <div class="technology-tags">
                     <div class="items">
@@ -44,29 +43,71 @@
 
                     <div class="items-1">
                         <p class="tag-title">Developed on:</p>
+                        <ul>
+                            <li>
+                                <img src="../../images/mpulse/phython.png" alt="phython" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/javascript.png" alt="javascript" class="responsive" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/react.png" alt="react" class="responsive" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/django.png" alt="django" class="responsive" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/spring.png" alt="spring" class="responsive" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/redis.png" alt="redis" class="responsive" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/logstash.png" alt="logstash" class="responsive" />
+                            </li>
+                            <li>
+                                <img src="../../images/mpulse/rabbitmq.png" alt="rabbitmq" class="responsive" />
+                            </li>
+                            <li>
+                                <div class="container"><span class="count">+8</span></div>
+                            </li>
+                        </ul>
                         <div class="technologies">Python, Java, Java Script, React, Django, Flask, Spring, Hibernate, Tornado, SQLAlchemy, Postgress, Redshift, Elasticsearch, Logstash, Redis, RabbitMQ</div>                                                    
                     </div>
 
                     <div class="items-2">
-                        <p class="tag-title">Share on:</p>
-                        <div class="social-share"></div>
+                        <p class="tag-title">Share on:</p>                        
+                            <ul>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon">
+                                            <img src="../../images/mpulse/linkedin.svg" alt="linkedin">
+                                        </i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon">
+                                            <img src="../../images/mpulse/twitter.svg" alt="twitter" class="responsive" />
+                                        </i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" target="_blank">
+                                        <i class="icon">
+                                            <img src="../../images/mpulse/link.svg" alt="link" class="responsive" />
+                                        </i>
+                                    </a>
+                                </li>
+                            </ul>                        
                     </div>
-                    <!--<div class="tags">
-                        <p class="tag-title">Developed on:</p>
-                        <div class="items">
-                            <p class="technologies">Python, Java, Java Script, React, Django, Flask, Spring, Hibernate, Tornado, SQLAlchemy, Postgress, Redshift,Elasticsearch, Logstash, Redis, RabbitMQ</p>
-                        </div>
-                    </div>-->
-                    <!--<div class="tags">
-                        <p class="tag-title">Share on:</p>
-                        <div class="items">dfdsfsdf</div>
-                    </div>-->
                 </div>
-            </div>
-		</div>
-	</section>
+                <div class="border-line"></div>
+            </div>               
+	</section>   
 	<section class="an-overview">
         <div class="overview-content">
+            <div class="label">An overview</div>
             <h2 class="overview-title">A complete patient engagement solution that improves communication, retention and health outcomes of patients</h2>
             <p class="para-detail">Engaging patients in their own health care routine is difficult. The negligence in taking care of the patient not only causes harm to them, but also to healthcare providers. It leads to added costs for plans and providers, and poor health outcomes for consumers.
             <p class="second-para-detail">To tackle this, mPulse offers a conversational AI solution where they send tailored appointment reminders, medication reminders, insurance renewal reminders to users and help them take charge of their own health. They also use machine learning to understand their users’ preferable mode and frequency of communication to enhance the patient experience.</p>            
@@ -75,12 +116,14 @@
     </section>
 	<section class="the-challenge">
         <div class="challenge">
+            <div class="label">the challenge</div>
             <h2 class="tackling-the-scalabi">Tackling the scalability issue to provide a seamless customer experience</h2>
             <p class="m-pulse-wanted-us-to">mPulse wanted us to help them in making the platform more secure, efficient and fast. The earlier platform had some limitations related to performance and scalability. Our partners realized that in order to grow the platform the right way, there was an urgent need to address the scalability and make the platform future-ready.</p>
         </div>
     </section>
 	<section class="our-approach">
         <div class="approach-content">
+            <div class="label">our approach</div>
             <h2 class="glued-to-users-prob">Glued to user’s problems, not our assumptions</h2>
             <div class="row">
                 <div class="column-left">
@@ -94,6 +137,7 @@
     </section>
 	<section class="our-design-process">
         <div class="design-process">
+            <div class="label">our design process</div>
             <h2 class="main-title">Beginning with a right foundation</h2>
             <p class="simple-text">Earlier, the platform which healthcare providers used to reach out to patients was not self-serving. To create a new campaign, the users had to get in touch with the mPulse mobile’s customer support team who, in turn, created a new campaign as per the customer requirements.</p>
             <p class="simple-text-2">To make the platform self-sufficient, the mPulse team asked us to redesign their platform for the end users, so that users can create and analyze their campaigns by themselves.</p>
@@ -106,6 +150,7 @@
     </section>
 	<section class="ui-design">
         <div class="design-approach">
+            <div class="label">ui design</div>
             <h2 class="main-title">Improving usability and user experience of the system with our visual designs</h2>
             <p class="para-text">Since the platform has huge amounts of data, it was a challenge to work on creating simple workflows for our users. Nonetheless, it was a challenge that we loved solving!</p>
             <p class="para-text-2">we have maintained the simplicity, visual hierarchy and consistency in all the flows of the application. In fact, even the colors (blue and orange) are used keeping in mind mPulse’s branding colors.</p>
@@ -118,6 +163,7 @@
     </section>
 	<section class="development">
         <div class="development-process">
+            <div class="label">development</div>
             <h2 class="main-title">Engineering a robust solution</h2>
             <p class="process-text"> In different modules, we also did various API integrations (Compass, Eloqua, Airflow, Apollo) to streamline processes like medication reminders, creating and queueing of campaigns, and file processing. We also started getting involved in building a robust architecture for the platform to ensure that it’s scalable, secure and performant.</p>
             <p class="process-text-2">Apart from that, our engineers implemented a secure messaging channel which works on a host of latest technologies (Java, Spring, Hibernate, Python, Tornado, Celery, Postgres) and is deployed on AWS.</p>
@@ -126,8 +172,23 @@
     </section>
 	<section class="the-outcome">
         <div class="outcome-content">
+            <div class="label">the outcome</div>
             <h2 class="main-title">A transformative digital experience and better business outcomes</h2>
             <p class="outcome-para">Our partnership with mPulse is in an ongoing phase and we’re glad that we could assist mPulse in creating a technically-sound patient engagement platform. Today, mPulse has successfully transitioned to a better performing, scalable solution with more improvements on the way. The platform sends close to 330K messages on a normal business day during business hours, peaking at half a million on the busiest days. </p>
+        </div>
+    </section>
+    <section class="client-testimonial">
+        <div class="testimonial">            
+            <p class="testimonial-text">The platform is foundational for client engagement and business growth. Quovantis’s responsiveness, timely communication, collaboration, and a strong sense of ownership have contributed to our success.</p> 
+            <div class="item-footer">
+                <div class="image-container">
+                    <img class="partner-image" src="../../images/mpulse/ram.png">
+                </div>
+                <div class="details">
+                    <span class="name">Ram Pragya</span>
+                    <span class="company">CTO | mPulse</span>
+                </div>
+            </div>
         </div>
     </section>
 
