UI implementation for Lucid Reality

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<header id="header-common">
+<header class="header-main" id="header-common">
 	<div class="header-container">
 		<a class="logo-wrapper" href="/">
 			<img class="logo-wrapper__Quovantis-logo"
@@ -18,26 +18,83 @@
 		<nav class="header-navigation">
 			<ul class="header-navigation__wrapper">
 				<li class="nav-section">
-					<a class="nav-section__link">Who we are</a>
+					<a class="nav-section__link common-outline">Who we are</a>
 				</li>
 				<li class="nav-section">
-					<a class="nav-section__link">What we do</a>
+					<a class="nav-section__link common-outline">What we do</a>
 				</li>
 				<li class="nav-section">
-					<a class="nav-section__link">Our Work</a>
+					<a class="nav-section__link common-outline">Our Work</a>
 				</li>
 				<li class="nav-section">
 					<a class="nav-section__link header-btn primary-btn-sm">Get in
 						touch</a>
 				</li>
+			</ul>
+			<ul class="header-navigation__wrapper">
 				<li class="nav-section">
-					<a class="nav-section__link header-bottom-navigation">
+					<a class="nav-section__link header-bottom-navigation" id="nav-more-items">
 						<img alt="nav-icon" class="nav-hamburger-icon"
 						     src="../../images/menu.svg" />
 					</a>
 				</li>
 			</ul>
 		</nav>
+	</div>
+	<div class="expanded-menu">
+		<div class="left-details">
+			<div class="img-wrapper">
+				<img src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />
+			</div>
+			<div class="contact-info">
+				<ul class="contact-info-header list-style-none">
+					<li class="contact-info-header__items">
+						<span>t:<a href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>
+					</li>
+					<li class="contact-info-header__items">
+						<span>m:<a href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis" target="_top">hello@quovantis.com</a></span>
+					</li>
+				</ul>
+			</div>
+			<div class="social-media-links">
+				<ul class="header-social-media-wrapper list-style-none">
+					<li class="header-social-media-wrapper__link"><span>Medium</span></li>
+					<li class="header-social-media-wrapper__link"><span>Twitter</span></li>
+					<li class="header-social-media-wrapper__link"><span>Dribbble</span></li>
+					<li class="header-social-media-wrapper__link"><span>Instagram</span></li>
+					<li class="header-social-media-wrapper__link"><span>LinkdIn</span></li>
+				</ul>
+			</div>
+		</div>
+    
+		<div class="list-wrapper">
+			<ul class="list-style-none header-menu-list">
+				<li class="header-menu-list__items items-main">
+					<a class="common-outline">Who we are</a>
+				</li>
+				<li class="header-menu-list__items items-main">
+					<a class="common-outline">What we do</a>
+				</li>
+				<li class="header-menu-list__items items-main">
+					<a class="common-outline">Our Work</a>
+				</li>
+				<li class="header-menu-list__items">
+					<a class="common-outline">Home</a>
+				</li>
+				<li class="header-menu-list__items">
+					<a class="common-outline">Careers</a>
+				</li>
+				<li class="header-menu-list__items">
+					<a class="common-outline">Blog</a>
+				</li>
+				<li class="header-menu-list__items">
+					<a class="common-outline">Contact</a>
+				</li>
+				<li class="header-menu-list__items item-btn">
+					<a class="primary-btn-sm">Start a Project</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </header>
 
@@ -103,15 +160,89 @@
 	</section>
 
 	<section class="an-overview"></section>
-	<section class="the-solution"></section>
+	<section class="the-solution">
+		<div class="common-wrapper">
+			<h2 class="label">The Solution</h2>
+			<h3 class="main-heading">Designed for every user persona</h3>
+			<p class="common-para">The targeted audience of our app is either pro-lucid dreamers or beginners who are new to the realm of lucid dreaming. So, the user experience is designed to make it easy for every user persona.</p>
+			<div class="padding-1">
+				<div class="d-flex">
+					<div class="section-1">
+						<img class="mob-ui" src="/images/mobile-mockup-lucid-dream-2x.png" />
+						<!-- <div style="background: #152946;"></div> -->
+					</div>
+					<div class="section-2">
+						<ul class="solution-list-wrapper list-style-none margin-top-50">
+							<li class="solution-list-wrapper__items padding-btm-20">
+								<span class="common-para">The onboarding flow is <span class="special-text-bold">simple and intuitive.</span> Users can login using their Google account and navigate through the app easily.</span>
+							</li>
+							<li class="solution-list-wrapper__items padding-btm-20">
+								<span class="common-para">Each task is divided into <span class="special-text-bold">smodular steps that helps users move faster,</span> without getting overwhelmed by information overload.</span>
+							</li>
+							<li class="solution-list-wrapper__items padding-btm-20">
+								<span class="common-para">The use of sans-serif font is by choice to <span class="special-text-bold">simprove readability and clarity.</span> Since the users will be using the app at all times- during the daytime as well as night, we didn't want them to lose their attention to curvy font styles.</span>
+							</li>
+							<li class="solution-list-wrapper__items padding-btm-20">
+								<span class="common-para">The buttons and cards are <span class="special-text-bold">ergonomically placed</span> so that it's easier for the user to tap and swipe without using the other hand.</span>
+							</li>
+							<li class="solution-list-wrapper__items padding-btm-20">
+								<span class="common-para">We’ve designed the app keeping in mind the environment in which end users will use the application. Therefore, we’ve designed <span class="special-text-bold">multiple ways (voice, text and sketch) to record and maintain</span> a dream journal.</span>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="our-approach"></section>
-	<section class="development"></section>
-	<section class="the-outcome"></section>
+	<section class="development">
+		<div class="common-wrapper">
+			<h2 class="label">development</h2>
+			<h3 class="main-heading">Coding the experience</h3>
+			<p class="common-para">Since we were developing the MVP of this app, we followed the iterative and incremental development process to roll out this project. We worked in 2 weeks design and development sprints. </p>
+			<p class="common-para">In our design sprints, as we progressed from paper wireframes to prototypes, we also started working on the visual design. Meanwhile, we took feedback from all stakeholders and kept optimizing the controls and interactions of the app. </p>
+			<p class="common-para">In development sprints, our mobile team worked on the iOS platform to build this app. The backend is built in Firebase. We built the whole app from ground-up in just 3 weeks.</p>
+		</div>
+	</section>
+	<section class="the-outcome">
+		<div class="common-wrapper">
+			<h2 class="label">the outcome</h2>
+			<h3 class="main-heading">an experience worth experiencing</h3>
+			<p class="common-para">Lucid Reality is an award-winning app that won hearts at India’s Best Design Awards-2019 in the mobile design category. The app has also received ravishing reviews from Stanford's Sleep and Dream class where the founder of Lucid Reality teaches.</p>
+			<div class="d-flex award-wrapper">
+				<div class="section-1">
+					<div class="award-bg">
+						<img class="award-bg__img" src="/images/Award-Image.png">
+					</div>
+				</div>
+				<div class="section-2">
+					<div class="award-testimonial">
+						<p class="award-testimonial__para">Quovantis developed an aesthetically impressive app that's helped the company stand out in the App Store. Their designs are not only unique and highly professional, but also well-researched and thought-out. Their team went the extra mile to exceed expectations and was great to work with overall.</p>
+						<div class="award-testimonial__wrapper d-flex">
+							<img class="testimonial-client-img" src="/images/jonathan.png" />
+							<div class="testimonial-client-para">
+								<p class="testimonial-client-para__name">jonathan berent</p>
+								<p class="testimonial-client-para__designation">ceo<span class="testimonial-client-para__company">lucid reality</span></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="read-next"></section>
-	<section class="see-more"></section>
+	<section class="see-more">
+		<div class="common-wrapper">
+			<h2 class="label">see more</h2>
+			<h3 class="main-heading">Discover more of our work on Dribbble</h3>
+			<p class="common-para common-para--for-see-more">We're a bunch of playful, fun-loving designers who're in love with what they do. Interested to know which project is keeping us busy these days?</p>
+			<span class="secondary-btn"><a href="">Follow us on <span>Dribbble</span></a></span>
+		</div>
+	</section>
 </main>
 <footer class="footer">
 
 </footer>
+<script type="text/javascript" src="lucid-reality.js"></script>
 </body>
 </html>
