edit few section

--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -174,7 +174,7 @@
         <div class="outcome-content">
             <div class="label">the outcome</div>
             <h2 class="main-title">A transformative digital experience and better business outcomes</h2>
-            <p class="outcome-para">Our partnership with mPulse is in an ongoing phase and we’re glad that we could assist mPulse in creating a technically-sound patient engagement platform. Today, mPulse has successfully transitioned to a better performing, scalable solution with more improvements on the way. The platform sends close to 330K messages on a normal business day during business hours, peaking at half a million on the busiest days. </p>
+            <p class="outcome-para">Our partnership with mPulse is in an ongoing phase and we’re glad that we could assist mPulse in creating a technically-sound patient engagement platform. Today, mPulse has successfully transitioned to a better performing, scalable solution with more improvements on the way. The platform sends close to <span class="special-bold-text">330K messages on a normal business day during business hours</span>, peaking at half a million on the busiest days. </p>
         </div>
     </section>
     <section class="client-testimonial">
