--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -33,7 +33,7 @@
 			</ul>
 			<ul class="header-navigation__wrapper">
 				<li class="nav-section">
-					<a class="nav-section__link header-bottom-navigation" id="nav-more-items">
+					<a class="nav-section__link hamburger-menu" id="hamburger-menu-btn">
 						<img alt="nav-icon" class="nav-hamburger-icon"
 						     src="../../images/menu.svg" />
 					</a>
