--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -44,25 +44,33 @@
 	<div class="expanded-menu">
 		<div class="left-details">
 			<div class="img-wrapper">
-				<img src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />
+				<img
+					src="../../images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" />
 			</div>
 			<div class="contact-info">
 				<ul class="contact-info-header list-style-none">
 					<li class="contact-info-header__items">
-						<span>t:<a href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>
+						<span>t:<a
+							href="tel: +918882543303">+91&nbsp;888&nbsp;254&nbsp;3303</a></span>
 					</li>
 					<li class="contact-info-header__items">
-						<span>m:<a href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis" target="_top">hello@quovantis.com</a></span>
+						<span>m:<a
+							href="mailto:hello@quovantis.com?Subject=Hello%20Quovantis"
+							target="_top">hello@quovantis.com</a></span>
 					</li>
 				</ul>
 			</div>
 			<div class="social-media-links">
 				<ul class="header-social-media-wrapper list-style-none">
 					<li class="header-social-media-wrapper__link"><span>Medium</span></li>
-					<li class="header-social-media-wrapper__link"><span>Twitter</span></li>
-					<li class="header-social-media-wrapper__link"><span>Dribbble</span></li>
-					<li class="header-social-media-wrapper__link"><span>Instagram</span></li>
-					<li class="header-social-media-wrapper__link"><span>LinkdIn</span></li>
+					<li class="header-social-media-wrapper__link"><span>Twitter</span>
+					</li>
+					<li class="header-social-media-wrapper__link"><span>Dribbble</span>
+					</li>
+					<li class="header-social-media-wrapper__link"><span>Instagram</span>
+					</li>
+					<li class="header-social-media-wrapper__link"><span>LinkdIn</span>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -108,6 +116,7 @@
 			</h2>
 		</div>
 	</section>
+
 	<section class="what-we-did">
 		<div class="inner-container">
 			<div class="flex-items">
@@ -164,12 +173,16 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="an-overview">
 		<div class="common-wrapper">
 			<h2 class="label">An Overview</h2>
-			<h3 class="main-heading">Are you dreaming? Or, are you Lucid Dreaming?</h3>
+			<h3 class="main-heading">Are you dreaming? Or, are you Lucid
+				Dreaming?</h3>
 			<p class="common-para">
-				Lucid dreaming is a dream where you’re aware of everything you see and experience. In fact, a person can also control what happens in the dream. This typically happens during REM sleep, one of the dream-stages.
+				Lucid dreaming is a dream where you’re aware of everything you see and
+				experience. In fact, a person can also control what happens in the
+				dream. This typically happens during REM sleep, one of the dream-stages.
 			</p>
 			<div class="padding-1">
 				<div class="d-flex">
@@ -179,24 +192,24 @@
 						<!-- <div style="background: #152946;"></div> -->
 					</div>
 					<div class="section-2">
-						<ul class="solution-list-wrapper list-style-none margin-top-50">
-							<li class="solution-list-wrapper__items padding-btm-20">
+						<ul class="solution-list-wrapper list-style-none">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">The onboarding flow is <span
 									class="special-text-bold">simple and intuitive.</span> Users can login using their Google account and navigate through the app easily.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">Each task is divided into <span
 									class="special-text-bold">smodular steps that helps users move faster,</span> without getting overwhelmed by information overload.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">The use of sans-serif font is by choice to <span
 									class="special-text-bold">simprove readability and clarity.</span> Since the users will be using the app at all times- during the daytime as well as night, we didn't want them to lose their attention to curvy font styles.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">The buttons and cards are <span
 									class="special-text-bold">ergonomically placed</span> so that it's easier for the user to tap and swipe without using the other hand.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">We’ve designed the app keeping in mind the environment in which end users will use the application. Therefore, we’ve designed <span
 									class="special-text-bold">multiple ways (voice, text and sketch) to record and maintain</span> a dream journal.</span>
 							</li>
@@ -206,6 +219,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="the-solution">
 		<div class="common-wrapper">
 			<h2 class="label">The Solution</h2>
@@ -222,24 +236,24 @@
 						<!-- <div style="background: #152946;"></div> -->
 					</div>
 					<div class="section-2">
-						<ul class="solution-list-wrapper list-style-none margin-top-50">
-							<li class="solution-list-wrapper__items padding-btm-20">
+						<ul class="solution-list-wrapper list-style-none">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">The onboarding flow is <span
 									class="special-text-bold">simple and intuitive.</span> Users can login using their Google account and navigate through the app easily.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">Each task is divided into <span
 									class="special-text-bold">smodular steps that helps users move faster,</span> without getting overwhelmed by information overload.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">The use of sans-serif font is by choice to <span
 									class="special-text-bold">simprove readability and clarity.</span> Since the users will be using the app at all times- during the daytime as well as night, we didn't want them to lose their attention to curvy font styles.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">The buttons and cards are <span
 									class="special-text-bold">ergonomically placed</span> so that it's easier for the user to tap and swipe without using the other hand.</span>
 							</li>
-							<li class="solution-list-wrapper__items padding-btm-20">
+							<li class="solution-list-wrapper__items">
 								<span class="common-para">We’ve designed the app keeping in mind the environment in which end users will use the application. Therefore, we’ve designed <span
 									class="special-text-bold">multiple ways (voice, text and sketch) to record and maintain</span> a dream journal.</span>
 							</li>
@@ -249,7 +263,9 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="our-approach"></section>
+
 	<section class="development">
 		<div class="common-wrapper">
 			<h2 class="label">development</h2>
@@ -266,6 +282,7 @@
 				built the whole app from ground-up in just 3 weeks.</p>
 		</div>
 	</section>
+
 	<section class="the-outcome">
 		<div class="common-wrapper">
 			<h2 class="label">the outcome</h2>
@@ -302,24 +319,53 @@
 			</div>
 		</div>
 	</section>
-	<section class="read-next"></section>
+
+	<section class="read-next">
+		<label class="label">the outcome</label>
+		<div class="inner-container">
+			<div class="first-section">
+				<h2>Catalog</h2>
+				<p>Revolutionizing content production workflows with technology & design</p>
+				<a href="">View case study</a>
+			</div>
+			<div class="second-section">
+				<h2></h2>
+				<p></p>
+				<a href=""></a>
+			</div>
+		</div>
+	</section>
+
 	<section class="see-more">
-		<div class="common-wrapper">
-			<h2 class="label">see more</h2>
+		<div class="inner-container">
+			<h2 class="label">See more</h2>
 			<h3 class="main-heading">Discover more of our work on Dribbble</h3>
 			<p class="common-para common-para--for-see-more">We're a bunch of playful,
 				fun-loving designers who're in love with what they do. Interested to
 				know which project is keeping us busy these days?</p>
-			<span class="secondary-btn"><a href="">Follow us on <span>Dribbble</span></a></span>
+			<a class="secondary-cta">
+				<img alt="" src="../../images/lucid/dribble.svg" />
+				Follow us on Dribbble
+			</a>
 		</div>
 	</section>
+
 </main>
 
 <footer class="footer"></footer>
+
 <!--External Scripts-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script
+	crossorigin="anonymous"
+	integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script
+	crossorigin="anonymous"
+	integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 
 <script src="lucid-reality.js" type="text/javascript"></script>
