LR page - see more section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -329,9 +329,9 @@
 				<a href="">View case study</a>
 			</div>
 			<div class="second-section">
-				<h2></h2>
-				<p></p>
-				<a href=""></a>
+				<h2>mPulse</h2>
+				<p>A HIPAA compliant mobile engagement solution for healthcare providers</p>
+				<a href="">View case study</a>
 			</div>
 		</div>
 	</section>
