LR page - development section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -321,17 +321,25 @@
 	</section>
 
 	<section class="read-next">
-		<label class="label">the outcome</label>
 		<div class="inner-container">
-			<div class="first-section">
+			<label class="label">read next</label>
+			<div class="section-wrapper">
+				<div class="first-section">
 				<h2>Catalog</h2>
 				<p>Revolutionizing content production workflows with technology & design</p>
-				<a href="">View case study</a>
+				<a href="">
+					View case study
+					<i class="icon right-arrow"></i>
+				</a>
 			</div>
-			<div class="second-section">
+				<div class="second-section">
 				<h2>mPulse</h2>
 				<p>A HIPAA compliant mobile engagement solution for healthcare providers</p>
-				<a href="">View case study</a>
+				<a href="">
+					View case study
+					<i class="icon right-arrow"></i>
+				</a>
+			</div>
 			</div>
 		</div>
 	</section>
