LR page - development section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -267,7 +267,7 @@
 	<section class="our-approach"></section>
 
 	<section class="development">
-		<div class="common-wrapper">
+		<div class="inner-container">
 			<h2 class="label">development</h2>
 			<h3 class="main-heading">Coding the experience</h3>
 			<p class="common-para">Since we were developing the MVP of this app, we
@@ -284,7 +284,7 @@
 	</section>
 
 	<section class="the-outcome">
-		<div class="common-wrapper">
+		<div class="inner-container">
 			<h2 class="label">the outcome</h2>
 			<h3 class="main-heading">an experience worth experiencing</h3>
 			<p class="common-para">Lucid Reality is an award-winning app that won
