Worked on what we did section for mobile

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -122,21 +122,29 @@
 			<div class="flex-items">
 				<div class="item">
 					<p class="title">What we did:</p>
-					<ul>
-						<li><a href="">UX</a></li>
-						<li><a href="">App Development</a></li>
-						<li><a href="">Healthtech</a></li>
-						<li><a href="">Product Engineering</a></li>
+					<ul class="working-area-wrapper">
+						<li class="working-area-wrapper-list">
+							<span class="working-area-wrapper-list__item"><a href="">UX</a></span>
+						</li>
+						<li class="working-area-wrapper-list">
+							<span class="working-area-wrapper-list__item"><a href="">App Development</a></span>
+						</li>
+						<li class="working-area-wrapper-list">
+							<span class="working-area-wrapper-list__item"><a href="">Healthtech</a></span>
+						</li>
+						<li class="working-area-wrapper-list">
+							<span class="working-area-wrapper-list__item"><a href="">Product Engineering</a></span>
+						</li>
 					</ul>
 				</div>
 				<div class="item">
 					<p class="title">Developed on:</p>
 					<ul>
 						<li><a href="">
-							<img alt="" src="">
+							<img alt="" src="/images/lucid/swift-icon.svg">
 						</a></li>
 						<li><a href="">
-							<img alt="" src="">
+							<img alt="" src="/images/lucid/firebase-icon.svg">
 						</a>
 						</li>
 					</ul>
@@ -186,11 +194,6 @@
 			</p>
 			<div class="padding-1">
 				<div class="d-flex">
-					<div class="section-1">
-						<img class="mob-ui"
-						     src="/images/mobile-mockup-lucid-dream-2x.png" />
-						<!-- <div style="background: #152946;"></div> -->
-					</div>
 					<div class="section-2">
 						<ul class="solution-list-wrapper list-style-none">
 							<li class="solution-list-wrapper__items">
