--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -183,7 +183,7 @@
 	</section>
 
 	<section class="an-overview">
-		<div class="common-wrapper">
+		<div class="inner-container">
 			<h2 class="label">An Overview</h2>
 			<h3 class="main-heading">Are you dreaming? Or, are you Lucid
 				Dreaming?</h3>
@@ -224,7 +224,7 @@
 	</section>
 
 	<section class="the-solution">
-		<div class="common-wrapper">
+		<div class="inner-container">
 			<h2 class="label">The Solution</h2>
 			<h3 class="main-heading">Designed for every user persona</h3>
 			<p class="common-para">The targeted audience of our app is either
